# pdf-redactor

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.sh  run.sh  stop.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: document.rs  file.rs  mod.rs  redaction.rs  text.rs
src-tauri/src/pdf/: document.rs  metadata_cleaner.rs  mod.rs  redaction_engine.rs  text_extraction.rs  verification.rs
src/components/landing/: Globe.tsx
src/components/pdf-viewport/: AnnotationLayer.tsx  PageCanvas.tsx  PdfViewport.tsx
src/components/sidebar/: SearchPanel.tsx
src/components/toolbar/: Toolbar.tsx
src/hooks/: usePdfDocument.ts  useTauriCommands.ts
src/lib/: pdf-renderer.ts  store.ts  types.ts
