[package]
name = "pdf-redactor"
version = "0.1.0"
description = "Free, open-source PDF redactor with true content removal"
authors = ["Edward Doan"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/edwarddoan/pdf-redactor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pdf_redactor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
mupdf = { version = "0.6", default-features = false, features = ["img", "system-fonts"] }
